Updated sys message

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -100,7 +100,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Aug 10 - The skill based DPS calculations got an update, you'll probably notice the numbers are slightly lower. I'm working with the new D3 API, which means updates will be delayed for a bit until I'm done. As always, feel free to contact me with any questions or concerns you might have at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+					<b>System Message</b>: Aug 12 - Upgrades on the backend are done, hopefully page load time will have decreased as a result. If anything seems broken, contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 				</div>
 			</div>
 		</div>
