--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -122,8 +122,17 @@
 			</form>
 		</div>
 	</div>
-	<script src="//static.getclicky.com/js" type="text/javascript"></script>
-	<script type="text/javascript">try{ clicky.init(66607061); }catch(e){}</script>
+	<script type="text/javascript">
+	var clicky_site_ids = clicky_site_ids || [];
+	clicky_site_ids.push(66607061);
+	(function() {
+	  var s = document.createElement('script');
+	  s.type = 'text/javascript';
+	  s.async = true;
+	  s.src = '//static.getclicky.com/js';
+	  ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+	})();
+	</script>
 	<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66607061ns.gif" /></p></noscript>
 	<script type="text/javascript">
 	  var uvOptions = {};
