Only show dmg if applicable.

--- a/application/views/scripts/record/item.phtml
+++ b/application/views/scripts/record/item.phtml
@@ -78,7 +78,9 @@
 <?= $this->record->name?> (<?= $p->_qualityMap[$this->record->quality] ?> <?= $p->prettyDisplay($this->record->type) ?>)
 <? if(isset($this->record->stats['dps'])): ?>
 <?= $this->record->stats['dps'] ?> dps
+<? if($this->record->stats['damage']): ?>
 <?= implode("-", $this->record->stats['damage']->export()) ?> damage
+<? endif; ?>
 <?= $this->record->stats['speed'] ?> attack speed
 <? elseif(isset($this->record->stats['armor'])): ?>
 <?= $this->record->stats['armor']?> Armor
