Removed gear-change from the two buttons

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -160,8 +160,8 @@ var activeActives = [];
 		<? if($myBuild): ?>
 		<p>Adding gear to your build will dynamically update the statistics displayed in the statistics panel.</p>
 		<p>
-			<a href="/item/create" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only gear-change"><span class="ui-button-text">Create New Item</span></a>
-			<a href="/user/items" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only gear-change"><span class="ui-button-text">View My Items</span></a>
+			<a href="/item/create" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"><span class="ui-button-text">Create New Item</span></a>
+			<a href="/user/items" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"><span class="ui-button-text">View My Items</span></a>
 		</p>
 		<? endif; ?>
 		<table class="equipment-table">
