--- a/application/views/scripts/index/faq.phtml
+++ b/application/views/scripts/index/faq.phtml
@@ -1,3 +1,3 @@
-<div class="ui-widget ui-corner-all ui-widget-content ui-helper-clearfix" style="padding: 20px">
+<div class="faq-content ui-widget ui-corner-all ui-widget-content ui-helper-clearfix" style="padding: 0 20px">
 	<?= $this->render("./index/faqs/" . $this->faq . ".phtml") ?>
 </div>
