--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -92,7 +92,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Aug 15 - Few updates today, including the homepage's look and bunch of other cosmetic fixes. I've also temporarily disabled "Build Guides", they will return soon and much improved. If anything seems broken, contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+					<b>System Message</b>: Aug 17 - I've enabled a few new web services on the site and am interested to know how the site's working. Is it fast, have you noticed anything slow down, is something not working? Shoot me an email, let me know which pages seem fast and which seem slow, or which parts don't work! <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>
 				</div>
 			</div>
 		</div>
