Adde json3 lib.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -14,6 +14,7 @@
 			->appendStylesheet("/css/dropdown.css");
 	?>	
 	<?= $this->headJs()
+			->appendFile("/js/json3.js")
 			->appendFile("/js/jquery.selectedOption.js")
 			->appendFile("/js/d3up.js")
 			->appendFile("/js/underscore.js")
