--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -93,7 +93,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Aug 21 - Patch 1.0.4 Skills Calculations will be live tomorrow (8/23)!<a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>
+					<b>System Message</b>: Aug 21 - Patch 1.0.4 Skills Calculations will be live tomorrow (8/23)!
 				</div>
 			</div>
 		</div>
