Skill updates for 1.0.4

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -93,7 +93,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Aug 21 - Patch 1.0.4 Skills Calculations will be live tomorrow (8/23)!
+					<b>System Message</b>: Aug 22 - Patch 1.0.4 Skills Calculations are now live! All individual skill-based DPS calculations should now be using the updated values. Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
 		</div>
