--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -44,6 +44,18 @@
 					<h1 class="table-header">Diablo 3 EHP/DPS/Gear Calculator</h1>
 					<ul id="navigation" class="dropdown ui-helper-clearfix ui-widget ui-widget-content"  style="text-align: center">
 						<li><a href="/">Home</a></li>
+						<!-- <li><a href="/guide">Guides <img src='/images/down-arrow.png' /></a>
+							<ul class="sub_menu">
+								<li><a href="/guide/create">Create Guide</a></li>
+								<li><a href="/user/guides">My Guides</a></li>
+								<li class='barbarian'><a href="/guide?class=barbarian">Barbarian</a></li>
+								<li class='demon-hunter'><a href="/guide?class=demon-hunter">Demon Hunter</a></li>
+								<li class='monk'><a href="/guide?class=monk">Monk</a></li>
+								<li class='witch-doctor'><a href="/guide?class=witch-doctor">Witch Doctor</a></li>
+								<li class='wizard'><a href="/guide?class=wizard">Wizard</a></li>
+								<li><a href="/guide">All Guides</a></li>
+							</ul>
+						</li> -->
 						<li><a href="/items">Items <img src='/images/down-arrow.png' /></a>
 							<ul class="sub_menu">
 								<li><a href="/item/create">Create Item</a></li>
@@ -93,7 +105,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Aug 22 - Patch 1.0.4 Skills Calculations are now live! All individual skill-based DPS calculations should now be using the updated values. Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
+					<b>System Message</b>: Aug 24 - Patch 1.0.4 Skill Changes, Legendary item attributes and new set bonuses are now live! All individual skill-based DPS calculations should now be using the updated values, but the legendary procs are not in the math yet. Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
 		</div>
