--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -423,6 +423,11 @@ dd:has(:focus) .chzn-container {
 .equipment-table td.primary {
 	width: auto;
 }
+.sidebar.sticky {
+	position: fixed;
+	top: 0;
+	margin-left: 5px;
+}
 .calc-stats ul {
 	list-style: none;
 	margin: 0 0 10px;
