removed unmin'd and removed unused skill file

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -300,4 +300,4 @@ var activeActives = [];
 	// 	$stickyEl.toggleClass('sticky', windowTop > elTop);
 	// });
 </script>
-<script type="text/javascript" src="/js/unmin/build.js?time=<?= time() ?>"></script>
+<script type="text/javascript" src="/js/build.js?time=<?= time() ?>"></script>
