--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -105,7 +105,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Aug 24 - Patch 1.0.4 Skill Changes, Legendary item attributes and new set bonuses are now live! All individual skill-based DPS calculations should now be using the updated values, but the legendary procs are not in the math yet. Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
+					<b>System Message</b>: Aug 25 - New version is live! If you notice your 'Copy from Battle.net' button is missing, please enter your BattleTag on your profile and it will re-appear. Check out <a href="">the notes for all the details</a> of this update. Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
 		</div>
