Added min/max damage for simulator and everywhere else.

--- a/application/views/scripts/item/_itemAttributeOptions.phtml
+++ b/application/views/scripts/item/_itemAttributeOptions.phtml
@@ -23,6 +23,7 @@
 <option label="Critical Hit Damage increased" value="critical-hit-damage">Critical Hit Damage increased</option>
 <option label="+% Damage" value="plus-damage">+% Damage</option>
 <option label="Minimum Damage" value="min-damage">Minimum Damage</option>
+<option label="Min/Max Damage" value="minmax-damage">+Min/Max Damage</option>
 <option label="Maximum Damage" value="max-damage">Maximum Damage</option>
 <option label="Arcane Damage" value="arcane-damage">Arcane Damage</option>
 <option label="Cold Damage" value="cold-damage">Cold Damage</option>
