--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -148,6 +148,7 @@ var activeActives = [];
 		<p>
 			<a href="/item/create" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"><span class="ui-button-text">Create New Item</span></a>
 			<a href="/user/items" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"><span class="ui-button-text">View My Items</span></a>
+			<a class="saveStats ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"><span class="ui-button-text">Save Stats to DB</span></a>
 		</p>
 		<? endif; ?>
 		<table class="equipment-table">
